# flashcron

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  README_en.md
.github/workflows/: ci.yml  release.yml
benches/: parser_bench.rs  scheduler_bench.rs
docs/: CHANGELOG.md  CONTRIBUTING.md
examples/: flashcron.example.toml
src/: db.rs  error.rs  lib.rs  main.rs
src/api/: index.html  mod.rs
src/cmd/: args.rs  commands.rs  logging.rs  mod.rs  state.rs
src/config/: job.rs  mod.rs  settings.rs
src/executor/: mod.rs
src/scheduler/: engine.rs  mod.rs  state.rs
tests/: integration_tests.rs
