[package]
name = "flashcron"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Alfredo Baratta <alfredobaratta@outlook.com>", "Anton Chen <contact@antonchen.com>"]
description = "A lightning-fast, ultra-efficient cron daemon written in Rust - Schedule tasks at the speed of light"
license = "MIT"
repository = "https://github.com/antonchen/flashcron"
homepage = "https://github.com/antonchen/flashcron"
documentation = "https://docs.rs/flashcron"
keywords = ["cron", "scheduler", "daemon", "async", "performance"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Async runtime - lightweight
tokio = { version = "1.34", features = ["rt-multi-thread", "sync", "time", "signal", "process", "fs", "macros", "io-util"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
log = { version = "0.4", features = ["kv", "serde", "kv_unstable"] }
fern = "0.7"
serde_json = { version = "1.0", features = ["preserve_order"] }

# Cron parsing
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Process management
nix = { version = "0.27", features = ["signal", "process"], optional = true }

# Notify for config reload
notify = "6.1"

# UUID for job IDs
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["web"]
web = ["dep:axum", "dep:tower-http", "dep:reqwest"]

[[bin]]
name = "flashcron"
path = "src/main.rs"

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
